# losoto

./: .gitignore  .readthedocs.yaml  ClassMakeHDF5.py  MANIFEST.in  README.md  Vagrantfile  _logging.py  _version.py  git_commands.txt  h5parm.py  losoto.parset  losoto.py  operations_lib.py  pyproject.toml  runtests.py  setup.py  test.parset
debug/: benchmark_all.sh  compare.out  compare.sh  flag.parset  flagextend.parset  flagstation.parset  plot.parset  reweight.parset
doc/: cookbook.aux  cookbook.blg  cookbook.out  cookbook.tex  cookbook.tex.backup  lofar_cookbook.tex
docs/: Makefile  compile_doc.txt  cookbook.out  cookbook.tex.backup  genindex.html  index.html  losoto.html  losoto.operations.html  modules.html  objects.inv  py-modindex.html  requirements-docs.txt  search.html  searchindex.js  setup.html  tecfit_doc.rst
examples/: solutions.h5
losoto/: ClassMakeHDF5.py  HDF5_handler.py  _FastApply.c  _FastApply.pyx  __init__.py  _importer.py  _logging.py  _version.py  configparser.py  h5parm.py  import.py  importer.py  lib_losoto.py  lib_operations.py  lib_unwrap.py  losoto_lib.py  operations.py  operations_lib.py  phase_colormap.py
operations/: .reset.py.swp  abs.py  clip.py  clocktec.py  combine.py  copy.py  example.py  fitClockTEC.py  flag.py  flagextend.py  interp.py  norm.py  plot.py  rescale.py  reset.py  reweight.py  smooth.py  tecfit.py  tecscreen.py  undefined.py_  unflag.py
parsets/: clocktecHBA.parset  clocktecLBA.parset  example.parset  losoto.parset  losoto1.parset  losoto2.parset  validation.parset
tests/: losoto_test.py  test_h5parm.py  test_lib_losoto.py  test_lib_operations.py  test_lib_unwrap.py  test_operations.py
tools/: H5parm_benchmark.py  H5parm_creator.py  H5parm_exporter.py  H5parm_importer.py  H5parm_merge.py  h5parmview.ipynb  lofarinit-para.sh  lofarinit.csh  lofarinit.sh  losoto_test.py  parmdb_collector.py  swap_freq_time_axes.py  test_swap_freq_time_axes.py
vagrant/: bashrc  (+1 more)
(+116 files in other folders)
